--- a/src/main/webapp/app/entities/users-group-jbh/users-group-jbh.component.html
+++ b/src/main/webapp/app/entities/users-group-jbh/users-group-jbh.component.html
@@ -16,9 +16,8 @@
             <tr>
             <th><span jhiTranslate="global.field.id">ID</span></th>
             <th><span jhiTranslate="jbhApp.usersGroup.name">Name</span></th>
-            <th><span jhiTranslate="jbhApp.usersGroup.invitationAccepted">Invitation Accepted</span></th>
+            <th><span jhiTranslate="jbhApp.usersGroup.membersGroup">Members Group</span></th>
             <th><span jhiTranslate="jbhApp.usersGroup.idUserOwner">Id User Owner</span></th>
-            <th><span jhiTranslate="jbhApp.usersGroup.idUserInvited">Id User Invited</span></th>
             <th></th>
             </tr>
             </thead>
@@ -26,12 +25,13 @@
             <tr *ngFor="let usersGroup of usersGroups ;trackBy: trackId">
                 <td><a [routerLink]="['/users-group-jbh', usersGroup.id, 'view' ]">{{usersGroup.id}}</a></td>
                 <td>{{usersGroup.name}}</td>
-                <td>{{usersGroup.invitationAccepted}}</td>
                 <td>
-                    {{usersGroup.idUserOwnerId}}
+                    <div *ngIf="usersGroup.membersGroupId">
+                        <a [routerLink]="['../members-group-jbh', usersGroup.membersGroupId , 'view' ]" >{{usersGroup.membersGroupId}}</a>
+                    </div>
                 </td>
                 <td>
-                    {{usersGroup.idUserInvitedId}}
+                    {{usersGroup.idUserOwnerId}}
                 </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
