--- a/src/main/webapp/app/entities/user-group-categories-jbh/user-group-categories-jbh.component.html
+++ b/src/main/webapp/app/entities/user-group-categories-jbh/user-group-categories-jbh.component.html
@@ -15,6 +15,8 @@
             <thead>
             <tr>
             <th><span jhiTranslate="global.field.id">ID</span></th>
+            <th><span jhiTranslate="jbhApp.userGroupCategories.name">Name</span></th>
+            <th><span jhiTranslate="jbhApp.userGroupCategories.categories">Categories</span></th>
             <th><span jhiTranslate="jbhApp.userGroupCategories.idUserGroup">Id User Group</span></th>
             <th></th>
             </tr>
@@ -22,6 +24,12 @@
             <tbody>
             <tr *ngFor="let userGroupCategories of userGroupCategories ;trackBy: trackId">
                 <td><a [routerLink]="['/user-group-categories-jbh', userGroupCategories.id, 'view' ]">{{userGroupCategories.id}}</a></td>
+                <td>{{userGroupCategories.name}}</td>
+                <td>
+                    <div *ngIf="userGroupCategories.categoriesId">
+                        <a [routerLink]="['../categories-jbh', userGroupCategories.categoriesId , 'view' ]" >{{userGroupCategories.categoriesId}}</a>
+                    </div>
+                </td>
                 <td>
                     <div *ngIf="userGroupCategories.idUserGroupId">
                         <a [routerLink]="['../users-group-jbh', userGroupCategories.idUserGroupId , 'view' ]" >{{userGroupCategories.idUserGroupId}}</a>
