--- a/src/main/webapp/app/entities/users-group-jbh/users-group-jbh-update.component.html
+++ b/src/main/webapp/app/entities/users-group-jbh/users-group-jbh-update.component.html
@@ -14,22 +14,17 @@
                     <input type="text" class="form-control" name="name" id="field_name"
                         [(ngModel)]="usersGroup.name" />
                 </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="jbhApp.usersGroup.invitationAccepted" for="field_invitationAccepted">Invitation Accepted</label>
-                    <input type="checkbox" class="form-control" name="invitationAccepted" id="field_invitationAccepted"
-                        [(ngModel)]="usersGroup.invitationAccepted" />
-                </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="jbhApp.usersGroup.idUserOwner" for="field_idUserOwner">Id User Owner</label>
-                    <select class="form-control" id="field_idUserOwner" name="idUserOwner" [(ngModel)]="usersGroup.idUserOwnerId" >
+                    <label class="form-control-label" jhiTranslate="jbhApp.usersGroup.membersGroup" for="field_membersGroup">Members Group</label>
+                    <select class="form-control" id="field_membersGroup" name="membersGroup" [(ngModel)]="usersGroup.membersGroupId" >
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="userOption.id" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.id}}</option>
+                        <option [ngValue]="membersGroupOption.id" *ngFor="let membersGroupOption of membersgroups; trackBy: trackMembersGroupById">{{membersGroupOption.id}}</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="jbhApp.usersGroup.idUserInvited" for="field_idUserInvited">Id User Invited</label>
-                    <select class="form-control" id="field_idUserInvited" name="idUserInvited" [(ngModel)]="usersGroup.idUserInvitedId" >
+                    <label class="form-control-label" jhiTranslate="jbhApp.usersGroup.idUserOwner" for="field_idUserOwner">Id User Owner</label>
+                    <select class="form-control" id="field_idUserOwner" name="idUserOwner" [(ngModel)]="usersGroup.idUserOwnerId" >
                         <option [ngValue]="null"></option>
                         <option [ngValue]="userOption.id" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.id}}</option>
                     </select>
